--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>assignment-1</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <h1>Hello assignment-1</h1>
+    <header>
+        <h1>hello</h1>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
