Frist section complete

--- a/index.html
+++ b/index.html
@@ -1,16 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>assignment-1</title>
-    <link rel="stylesheet" href="styles/style.css">
-</head>
-<body>
-    <header>
-        <h1>hello</h1>
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
+  <body>
+    <!-- This is a header section -->
+    <header class="header-section">
+      <nav class="nav-bar">
+        <h1 id="logo-title">Bangladesh 2.0</h1>
+        <ul>
+          <li class="btn-for-nav"><a href="#">Sign In</a></li>
+        </ul>
+      </nav>
     </header>
-    <main></main>
+    <!-- Header Section End -->
+
+    <!-- This is a main section -->
+    <main>
+      <!-- Section-1 Start -->
+      <section id="Section-1">
+        <div class="section-container">
+          <div class="container-title">
+            <h2 class="sub-title">Bangladesh 2.0</h2>
+            <h1 class="title-sce1">
+              Idea , innovation , vision and challenges in New Bangladesh.
+            </h1>
+            <button class="btn">Explore New Bangladesh</button>
+          </div>
+          <div class="container-image">
+            <img class="sec1-image" src="assets/hero.png" alt="Flag" />
+          </div>
+        </div>
+      </section>
+      <!-- Section-1 End -->
+
+      <!-- Section-2 Start -->
+      <section id="Section-2">
+        
+      </section>
+      <!-- Section-2 End -->
+    </main>
+    <!-- Main Section End -->
+
+    <!-- This is a footer section -->
     <footer></footer>
-</body>
+  </body>
 </html>
