--- a/index.html
+++ b/index.html
@@ -39,7 +39,50 @@
 
       <!-- Section-2 Start -->
       <section id="Section-2">
-        
+        <div class="text-1">
+          <h1 class="heading">The vision of Future</h1>
+          <p class="paragraph">
+            Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+            cutting-edge technology, promoting inclusive growth, and ensuring
+            sustainability. With initiatives in renewable energy, digital
+            transformation, and robust infrastructure, the country is set to
+            become a global model of development.
+          </p>
+        </div>
+        <div class="text-2">
+          <div class="backcolor-1">
+            <img class="img" src="assets/card-icon.png" alt="" />
+            <h3 class="sort-heading">Digital Transformation</h3>
+            <p>
+              Creating a nationwide digital ecosystem to enhance connectivity
+              and access to services for all citizens.
+            </p>
+            <button class="btn-1">Learn More</button>
+          </div>
+          <div class="backcolor-2">
+            <img class="img" src="assets/card-icon.png" alt="" />
+            <h3 class="sort-heading">Green Energy</h3>
+            <p>
+              Investments in solar and wind energy to ensure a sustainable and
+              eco-friendly future.
+            </p>
+            <button class="btn-2">Learn More</button>
+          </div>
+          <div class="backcolor-3">
+            <img class="img" src="assets/card-icon.png" alt="" />
+            <h3 class="sort-heading">Modern Infrastructure</h3>
+            <p>
+              Building state-of-the-art infrastructure to support economic
+              growth and global competitiveness.
+            </p>
+            <button class="btn-3">Learn More</button>
+          </div>
+        </div>
+        <div class="text-3">
+          <p>Yunus is a member of the Africa Progress Panel (APP), a group of ten distinguished individuals who advocate at the highest levels for equitable and sustainable development in Africa. Every year, the Panel releases a report, the Africa Progress Report, that outlines an issue of immediate importance to the continent and suggests a set of associated policies.</p>
+          <h3 class="Dr-younus-name">Dr. Muhammad Yunus</h3>
+          <p class="work">Chief Adviser of the People's Republic of Bangladesh</p>
+        </div>
       </section>
       <!-- Section-2 End -->
     </main>
