section four complete

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- This is a header section -->
-    <header class="header-section">
+    <header id="header-section">
       <nav class="nav-bar">
         <h1 id="logo-title">Bangladesh 2.0</h1>
         <ul>
@@ -19,7 +19,7 @@
     <!-- Header Section End -->
 
     <!-- This is a main section -->
-    <main>
+    <main id="main-section">
       <!-- Section-1 Start -->
       <section id="Section-1">
         <div class="section-container">
@@ -79,16 +79,125 @@
           </div>
         </div>
         <div class="text-3">
-          <p>Yunus is a member of the Africa Progress Panel (APP), a group of ten distinguished individuals who advocate at the highest levels for equitable and sustainable development in Africa. Every year, the Panel releases a report, the Africa Progress Report, that outlines an issue of immediate importance to the continent and suggests a set of associated policies.</p>
+          <p>
+            Yunus is a member of the Africa Progress Panel (APP), a group of ten
+            distinguished individuals who advocate at the highest levels for
+            equitable and sustainable development in Africa. Every year, the
+            Panel releases a report, the Africa Progress Report, that outlines
+            an issue of immediate importance to the continent and suggests a set
+            of associated policies.
+          </p>
           <h3 class="Dr-younus-name">Dr. Muhammad Yunus</h3>
-          <p class="work">Chief Adviser of the People's Republic of Bangladesh</p>
+          <p class="work">
+            Chief Adviser of the People's Republic of Bangladesh
+          </p>
         </div>
       </section>
       <!-- Section-2 End -->
+
+      <!-- Section-3 Start -->
+      <section id="Section-3">
+        <h1 class="news-heading">Recent News</h1>
+        <p class="news-summary">
+          Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+          cutting-edge technology, promoting inclusive growth, and ensuring
+          sustainability. With initiatives in renewable energy, digital
+          transformation, and robust infrastructure, the country is set to
+          become a global model of development.
+        </p>
+        <div class="news-container">
+          <div>
+            <img class="satel-img" src="assets/satelite.png" alt="" />
+          </div>
+          <div>
+            <h1 class="Satel-name">Bangladesh Launches New Satellite</h1>
+            <img class="logo-img" src="assets/al-jazeera.png" alt="" />
+            <div class="date-time">
+              <p>Date: 05/01/2025</p>
+              <p>Time: 10.25 PM</p>
+            </div>
+            <p class="news-summar">
+              Not until the creation and maintenance of decent conditions of
+              life for all people are recognized and accepted as a common
+              obligation of all people and all countries—not until then shall
+              we, with a certain degree of justification, be able to speak of
+              humankind as civilized
+            </p>
+            <button class="btn">Read More</button>
+          </div>
+        </div>
+        <div class="news-container">
+          <div>
+            <h1 class="Satel-name">Bangladesh Launches New Satellite</h1>
+            <img class="logo-img" src="assets/al-jazeera.png" alt="" />
+            <div class="date-time">
+              <p>Date: 05/01/2025</p>
+              <p>Time: 10.25 PM</p>
+            </div>
+            <p class="news-summar">
+              Not until the creation and maintenance of decent conditions of
+              life for all people are recognized and accepted as a common
+              obligation of all people and all countries—not until then shall
+              we, with a certain degree of justification, be able to speak of
+              humankind as civilized
+            </p>
+            <button class="btn">Read More</button>
+          </div>
+          <div>
+            <img class="satel-img" src="assets/satelite.png" alt="" />
+          </div>
+        </div>
+      </section>
+      <!-- Section-3 End -->
+
+      <!-- Section-4 Start -->
+      <section id="Section-4">
+        <div>
+          <h1 class="news-heading">Donate Today</h1>
+          <p class="contant">
+            Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+            cutting-edge technology, promoting inclusive growth, and ensuring
+            sustainability. With initiatives in renewable energy, digital
+            transformation, and robust infrastructure.
+          </p>
+          <div class="btn-container">
+            <div class="big-btn">
+              <button class="btn-box">100 Taka</button>
+            </div>
+            <div class="big-btn">
+              <button class="btn-box2-4">200 Taka</button>
+            </div>
+            <div class="big-btn">
+              <button class="btn-box">500 Taka</button>
+            </div>
+            <div class="big-btn">
+              <button class="btn-box2-4">1000 Taka</button>
+            </div>
+          </div>
+          <input
+            class="input-box"
+            type="text"
+            placeholder="Other Amount(Taka)"
+          />
+          <button class="btn-done">Done Now</button>
+        </div>
+      </section>
+      <!-- Section-4 End -->
     </main>
     <!-- Main Section End -->
 
-    <!-- This is a footer section -->
-    <footer></footer>
+    <!-- This is a Footer Section -->
+    <footer>
+      <section id="Section-5">
+        <h1 class="news-heading">Subscribe Newsletter</h1>
+        <p class="contant">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth.</p>
+        <form action="">
+          <input type="text">
+          <input type="submit" value="Subscribe">
+        </form>
+        <p class="contant">We promise not to spam you!</p>
+      </section>
+    </footer>
+    <!-- Footer Section End -->
   </body>
 </html>
