--- a/index.html
+++ b/index.html
@@ -188,15 +188,31 @@
 
     <!-- This is a Footer Section -->
     <footer>
+      <!-- Section-5 Start -->
       <section id="Section-5">
         <h1 class="news-heading">Subscribe Newsletter</h1>
-        <p class="contant">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth.</p>
-        <form action="">
-          <input type="text">
-          <input type="submit" value="Subscribe">
+        <p class="contant">
+          Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+          cutting-edge technology, promoting inclusive growth.
+        </p>
+        <form class="search">
+          <input type="text" />
+          <button>subscribe</button>
         </form>
         <p class="contant">We promise not to spam you!</p>
       </section>
+      <!-- Section-5 End -->
+       <!-- Section-6 Start -->
+      <section id="Section-6">
+        <h1 class="social-heading">Bangladesh 2.0</h1>
+        <hr/>
+        <div class="social-icon-container">
+          <img class="social-icon" src="assets/facebook.png" alt="facebook" />
+          <img class="social-icon" src="assets/instagram.png" alt="instagram" />
+          <img class="social-icon" src="assets/x.png" alt="twitter" />
+        </div>
+      </section>
+      <!-- Section-6 End -->
     </footer>
     <!-- Footer Section End -->
   </body>
